@@ -41,11 +41,8 @@ def tick(life, alife_seen, alife_not_seen, targets_seen, targets_not_seen, sourc
 			if not life['path'] or not brain.retrieve_from_memory(life, 'discovery_lock'):
 				if not 'scanned_chunks' in life['state_flags']:
 					life['state_flags']['scanned_chunks'] = []
-				
-				#if SETTINGS['smp']:
-				#sight.scan_surroundings(life, _chunks=brain.get_flag(life, 'nearby_chunks'), ignore_chunks=life['state_flags']['scanned_chunks'])
-				#else:
-				sight.scan_surroundings(life, ignore_chunks=life['state_flags']['scanned_chunks'])
+
+				sight.scan_surroundings(life, _chunks=brain.get_flag(life, 'visible_chunks'), ignore_chunks=life['state_flags']['scanned_chunks'])
 				
 				_explore_chunk = chunks.find_best_chunk(life, ignore_starting=True, ignore_time=True, lost_method=_lost_method, only_recent=True)
 				brain.store_in_memory(life, 'discovery_lock', True)
