@@ -27,9 +27,8 @@ def conditions(life, alife_seen, alife_not_seen, targets_seen, targets_not_seen,
 	_leading_target = judgement.get_leading_target(life)
 	if _leading_target:
 		_known = brain.knows_alife_by_id(life, _leading_target)
-		judgement.judge_chunk(life, chunks.get_chunk_key_at(_known['last_seen_at']))
 	
-	_explore_chunk = chunks.find_best_chunk(life)
+	_explore_chunk = chunks.find_best_chunk(life, ignore_time=True)
 	brain.store_in_memory(life, 'explore_chunk', _explore_chunk)
 	
 	if not _explore_chunk:
