@@ -13,7 +13,7 @@ NERVOUS:!IS_FAMILY
 AGGRAVATED:!IS_FAMILY,%IS_NIGHT
 
 [MOVEMENT]
-FOLLOW:@IS_IDLE,IS_CHILD,!IS_PARENT
+FOLLOW:IS_CHILD
 
 [SEARCH]
 JUDGE:*DISTANCE_TO_POS
@@ -33,12 +33,16 @@ CAN_CAMP:NEVER
 
 [STATE]
 DISCOVER:IS_SAFE
+EXPLORE:IS_SAFE
 SURRENDER:NEVER
 NEEDS:NEVER
 SHELTER:IS_SAFE
 COVER:NEVER
 HIDE:NEVER
 HIDDEN:NEVER
+
+[EXPLORE]
+FOLLOW_TARGET_IF:IS_CHILD
 
 [SAFETY]
 INTIMIDATED:@IS_INCAPACITATED,IS_TARGET
