@@ -8,9 +8,9 @@ BATTLE_CRY_ACTION:"@n lurches forward."
 [JUDGE]
 TRUST:IS_SAME_SPECIES{TARGET.TRUST+5}
 FACTORS:IS_SAME_SPECIES
-BREAK_TRUST:HAS_ATTACKED_TRUSTED{TARGET.DANGER+20}|IS_NERVOUS{TARGET.DANGER+5}|IS_AGGRAVATED{TARGET.DANGER+5}
-NERVOUS:!IS_SAME_SPECIES
-AGGRAVATED:%IS_NIGHT
+BREAK_TRUST:IS_NERVOUS{TARGET.DANGER+6}
+NERVOUS:@NEVER
+AGGRAVATED:%IS_NIGHT,!IS_SAME_SPECIES
 
 [MOVEMENT]
 FOLLOW:@NEVER
@@ -33,7 +33,7 @@ CAN_CAMP:NEVER
 
 [STATE]
 EXPLORE:ALWAYS
-DISCOVER:ALWAYS
+DISCOVER:NEVER
 SURRENDER:NEVER
 NEEDS:NEVER
 SHELTER:IS_SAFE
@@ -42,7 +42,7 @@ HIDE:NEVER
 HIDDEN:NEVER
 
 [SAFETY]
-INTIMIDATED:@IS_INCAPACITATED,IS_TARGET
+INTIMIDATED:NEVER
 
 [MEMORY]
 TEMP:ALWAYS
