@@ -99,8 +99,8 @@
     }
   }, 
   "name": "Night Terror", 
-  "vars": "vision_max=25|hunger_max=20000|thirst_max=10000|hunger=hunger_max|thirst=thirst_max", 
-  "flags": "LEGS[flleg,frleg,blleg,brleg]|CAN_GROUP|CAN_SEE|HUNGER|THIRST|MELEE[jaw,flpaw,frpaw]", 
+  "vars": "vision_max=20|hunger_max=20000|thirst_max=10000|hunger=hunger_max|thirst=thirst_max", 
+  "flags": "LEGS[blleg,brleg]|CAN_GROUP|CAN_SEE|HUNGER|THIRST|MELEE[jaw,flpaw,frpaw]", 
   "type": "mutant", 
   "species": "night_terror", 
   "icon": "T"
